--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "clarifai": "^2.8.0",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
-    "react-scripts": "1.1.4"
+    "react-particles-js": "^2.3.0",
+    "react-scripts": "1.1.4",
+    "react-tilt": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
