--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "babel-eslint": "^8.2.6",
     "clarifai": "^2.8.0",
+    "cors": "^2.8.4",
     "mdbootstrap": "^4.5.8",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "eslint": "^5.3.0",
-    "eslint-plugin-react": "^7.10.0"
+    "eslint-plugin-react": "^7.10.0",
+    "tachyons": "^4.11.1"
   }
 }
