--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "devDependencies": {
     "eslint": "^5.3.0",
-    "eslint-plugin-react": "^7.10.0",
-    "tachyons": "^4.11.1"
+    "eslint-plugin-react": "^7.10.0"
   }
 }
